--- a/api/package.json
+++ b/api/package.json
@@ -11,7 +11,10 @@
     "cors": "^2.8.0",
     "express-rate-limit": "^7.0.0",
     "node-fetch": "^2.7.0",
-    "cheerio": "^1.0.0"
+    "cheerio": "^1.0.0",
+    "playwright-core": "^1.50.0",
+    "playwright-extra": "^4.3.0",
+    "puppeteer-extra-plugin-stealth": "^2.11.0"
   },
   "engines": {
     "node": ">=14.0.0"
